added goobye message

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1> Hello Mohammed</h1>
   </header>
   <p>I don't know what I go talk oo!</p>
+  <p>I'm sooo hungry because I haven't eaten breakfast.</p>
+  <p>Soo everyone good bye!</p>
 </body>
 
 </html>
